# ai-assistant

./: .coverage  .gitignore  README.md  agent.py  debug_docs_test.py  debug_test.py  notes.md  pyproject.toml  pytest.ini  requirements.txt  test_query.py
.agents/skills/: .ai-skills-meta.json
data/: test.txt
docs/: indexer-spa.html  indexer-web.html  spa.html
src/: __init__.py  api.py  chroma_client.py  indexer.py  server.py
src/api/: __init__.py  endpoints.py  models.py  templates.py
src/indexer/: __init__.py  api_client.py  chroma_client.py  chunking.py  config.json  config.py  exceptions.py  file_handlers.py  file_processing.py  indexer.py  indexing.py  logging_config.py  main.py  utils.py
src/semantic_doc_indexer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/server/: __init__.py  __main__.py  handler.py  response.py
tests/: __init__.py  conftest.py  test_api_client.py  test_chroma_client.py  test_chunking.py  test_config.py  test_endpoints.py  test_file_handlers.py  test_indexing.py  test_integration.py  test_utils.py
